<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".DiagnosaActivity">

    <TextView
        android:id="@+id/tv_nilai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        tools:text="@string/nilai" />

    <TextView
        android:id="@+id/txt_kecanduan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_kecanduan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        tools:text="@string/kecanduan" />

</LinearLayout>